# documentor

./: .env.example  .env.local.example  .gitignore  CLAUDE.md  README.md  TODO.md  TODO.txt  activate-env.bat  activate-env.sh  duplicates_report.txt  environment.yml  find_image_duplicates.py  hash.py  main.py  migration_dry_run.txt  migration_dry_run_v2.txt  pyproject.toml  requirements.txt  test_two_phase.py  update_hashes.py
.claude/: settings.local.json
config/: document_types.json  document_types.json.example  file_check_validations.json  file_check_validations.json.example  hash_cache.yaml.example  mappings.yaml.example  zip_passwords.json.example
config/examples/: file_check_validations.json.example  gmail_credentials.json.example  gmail_settings.json.example
documentor/: __init__.py  config.py  enums.py  gmail.py  hashing.py  llm.py  logging_utils.py  metadata.py  models.py  pdf.py  profiles.py  tasks.py
papertrail/: config.py  enums.py  gmail.py  hashing.py  llm.py  logging_utils.py  mappings.py  metadata.py  models.py  pdf.py  profiles.py  rejected.py
profiles/: .gitignore  README.md  default.yaml.example
scripts/: check_hash.py  debug_classification.py  migrate_document_types.py  migrate_duplicates.py  migrate_issuing_parties.py  pdf_comparer.py  recompute_hashes.py  update_file_hashes.py  update_hashes.py
